--- a/app/src/pages/AdminGuestView.css
+++ b/app/src/pages/AdminGuestView.css
@@ -11,7 +11,7 @@
 }
 
 .match-table-heading {
-    font-family: Brandon Grotesque;
+    font-family: 'Josefin Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -25,7 +25,7 @@
 }
 
 .match-table-content {
-    font-family: Brandon Grotesque;
+    font-family: 'Josefin Sans';
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
