--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,3 +14,21 @@ code {
     monospace;
   color: #ffffffb1;
 }
+
+.eCdTYS > *{
+  color: #1f1f1f;
+  padding: 20px 8px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  line-height: 2.5;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-decoration: none;
+}
+
+.eCdTYS:hover > *{
+  background-color: #eee;
+}
