fixes minor styling issues

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,7 +14,7 @@ code {
     monospace;
   color: #ffffffb1;
 }
-
+/* 
 .eCdTYS > *{
   color: #1f1f1f;
   padding: 20px 8px;
@@ -31,4 +31,4 @@ code {
 
 .eCdTYS:hover > *{
   background-color: #eee;
-}
+} */
